metadata/objects/fragment8__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox112__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox112</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox113__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox113</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox114__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox114</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime212__c</fullName>
        <label>DateTime212</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime213__c</fullName>
        <label>DateTime213</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime214__c</fullName>
        <label>DateTime214</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Formula162__c</fullName>
        <formula>true</formula>
        <label>Formula162</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula163__c</fullName>
        <formula>true</formula>
        <label>Formula163</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula164__c</fullName>
        <formula>true</formula>
        <label>Formula164</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea10__c</fullName>
        <label>LongTextArea10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea11__c</fullName>
        <label>LongTextArea11</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea1__c</fullName>
        <label>LongTextArea1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number100__c</fullName>
        <label>Number100</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number101__c</fullName>
        <label>Number101</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number102__c</fullName>
        <label>Number102</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text12__c</fullName>
        <label>Text12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text13__c</fullName>
        <label>Text13</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text14__c</fullName>
        <label>Text14</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>fragment8</label>
    <nameField>
        <displayFormat>fragment8-{0000000}</displayFormat>
        <label>fragment8 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>fragment8s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>